<resources>

    <string name="app_name">Computação Móvel</string>
    <string name="app_team">
        Raphael Fuchter \n
        Wesley Fuchter
    </string>

    <string name="broadcastreceiver">BroadcastReceiver</string>
    <string name="broadcastreceiver_desc">
        - BroadcastReceiver é um componente do android utilizado para que aplicações possam reagir a determinados eventos gerados por uma intent. \n\n
        - Um BroadcastReceiver sempre é executado em segundo plano durante pouco tempo e sem utilizar uma interface gráfica. \n\n
        - Seu objetivo é receber uma mensagem (intent) e processá-la sem que o usuário perceba. \n\n
        - Neste app está implementado a função RECEIVE_BOOT_COMPLETED, que após o iniciar o SO este aplicativo iniciará automaticamente.
    </string>
    <string name="outras_opcoes_disponiveis">Outras Opções Disponíveis</string>
    <string-array name="array_broadcastreceiver">
        <item>BATTERY_CHANGED</item>
        <item>BATTERY_OKAY</item>
        <item>BOOT_COMPLETED</item>
        <item>BUG_REPORT</item>
        <item>CALL</item>
        <item>CALL_BUTTON</item>
        <item>DATE_CHANGED</item>
        <item>REBOOT</item>
    </string-array>


    <string name="sms">SMS</string>
    <string name="sms_desc">
        - O Android permite enviar e receber uma mensagem SMS pela aplicação. \n\n
        - Para enviar um SMS é utilizado a clase android.telephony.SmsManager. \n\n
        - Para receber um SMS na aplicação é utilizado um BroadcastReceiver. \n\n
        - Neste app está implementado a função para receber SMS, que após receber o SMS este aplicativo iniciará automaticamente a tela mostrando o número que enviou o SMS e a mensagem.
    </string>
    <string name="numero">Número</string>
    <string name="msg">Mensagem</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="send_sms_intent">Enviar SMS Intent</string>
    <string name="receive_sms">Receber SMS</string>


    <string name="service">Service</string>
    <string name="service_desc">
        - Service é um componente do android utilizado para executar longas tarefas em segundo plano. \n\n
        - Um Service pode ser executado em segundo plano por tempo indeterminado, mesmo que o componente que iniciou esse serviço tenha sido encerrado/destruído.\n\n
        - Normalmente, um Service sempre executa um única operação e apenas para a sua execução quando a tarefa pretendida for completada.
    </string>
    <string name="start_service">Iniciar Service</string>
    <string name="stop_service">Parar Service</string>

</resources>
