<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="net.unibave.compmoveltrabfinal.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/unibave"
        android:id="@+id/imageView_unibave" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_team"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/broadcastreceiver"
        android:id="@+id/btn_broadcastreceiver"
        android:layout_marginTop="10dp"
        android:onClick="btnOkOnClickBroadcastReceiver" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:id="@+id/btn_sms"
        android:onClick="btnOkOnClickSMS" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:id="@+id/btn_service"
        android:onClick="btnOkOnClickService" />

</LinearLayout>
